minor - adding margin top for social header - partial CT#446

--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -2315,6 +2315,9 @@ div.image-social-content center.friend {
 	text-align:left;
 	float:left;
 }
+.social-header {
+	margin-bottom:8px;
+}
 #social-content {
 	width:100%;
 	height:auto;
