--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -1898,6 +1898,93 @@ div.comments {
 .quiz_export_link {
 	float: right;
 }
+
+/**********************************************
+ *  EXERCISE TOOL                           *
+ **********************************************/
+.exercice_form {
+	width: 300px;
+}
+#validationButton {
+	text-decoration: none;
+	margin: 5px;
+	/*border:1px solid #999999;*/
+	/*background:#F0F0F0;  */
+	padding: 3px;
+	padding-left:10px;
+	padding-right:10px;
+	font-weight:bold;
+	color:#666;
+}
+.rounded {
+	background:#ccc;
+	padding: 3px;
+	width: 200px;
+	margin-left:10px;
+}
+.rounded_inner {
+	background:#FFF;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.rounded_inner:hover {
+	color:#C802A5;
+	background:#F0F0F0;
+}
+.exercise_scenario_label {
+}
+.exercise_scenario_element {
+}
+span.checkbox {
+	width: 19px;
+	height: 25px;
+	padding: 0 5px 0 0;
+	background: url(images/checkbox.gif) no-repeat;
+	display: block;
+	clear: left;
+	float: left;
+}
+span.radio {
+	width: 19px;
+	height: 25px;
+	padding: 0 5px 0 0;
+	background: url(images/radio.gif) no-repeat;
+	display: block;
+	clear: left;
+	float: left;
+}
+#question_title {
+}
+#question_description {
+	padding-left:5px;
+	padding-top:10px;
+}
+#question_score {
+	padding-left:5px;
+	padding-top:10px;
+	padding-bottom:10px;
+	font-weight:bold;
+	font-size:130%;
+}
+#question_feedback {
+	background-color:#FCF7BA;
+	border:1px solid #CCCCCC;
+	color:#666666;
+	font-size:11px;
+	font-weight:bold;
+	list-style-type:none;
+	margin-top:5px;
+	padding:5px;
+}
+#exercise_close_link {
+	background: url(images/close.gif) no-repeat;
+	padding-left: 20px;
+}
+#exercise_close_link:hover {
+	background: url(images/close_highlight.gif) no-repeat;
+	padding-left: 20px;
+}
+
 /*Exercice timer*/
 #square{
   padding:5px;
