--- a/main/css/academica/default.css
+++ b/main/css/academica/default.css
@@ -1850,6 +1850,11 @@ div.image-social-content center.friend {
 	width:200px;
 }
 
+.social-profile-extended {
+	width:320px;
+	overflow:hidden;
+}
+
 /* general layout of the profile page */
 #social-profile-wrapper {
 	width: 100%;
