--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -3306,6 +3306,10 @@ a.read {
 	padding:2px;
 }
 
+.social-profile-extended {
+	width:320px;
+	overflow:hidden;
+}
 
 div.image-social-content {
 	float:left;
