--- a/main/css/public_admin/default.css
+++ b/main/css/public_admin/default.css
@@ -3267,6 +3267,10 @@ div.image-social-content center.friend {
 	padding-left:10px;
 	width:200px;
 }
+.social-profile-extended {
+	width:320px;
+	overflow:hidden;
+}
 
 /* general layout of the profile page */
 
