--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -1480,7 +1480,7 @@ div.admin_section h4 {
 	line-height: 20px;
 }
 .session_box {
-	background-color: #F0F6FF;
+	background-color: #E5F2F7;
 	border: 1px solid #DCE5F3;
 	/* font-weight: bold; */
 	color: #666;
@@ -1500,8 +1500,8 @@ div.admin_section h4 {
  *  DOKEOS CONFIG SETTINGS OF THE PLATFORM ADMIN SECTION 	   *
  ***************************************************************/
 .sectiontitle {
-	background-color: #a0e5fc;
-	border: 1px solid #cccccc;
+	background-color: #D2ECF5;
+	border: 1px solid #ABDAEA;
 	font-weight: bold;
 	color: #666666;
 	list-style-type: none;
@@ -2313,6 +2313,13 @@ padding-top: 0px;	padding-right: 0px;	padding-bottom: 0px;	padding-left: 0px;}
 	float:left;
 	width:100%;
 }
+.content_table {
+	padding:2px;
+	margin-bottom: 5px;
+	vertical-align:middle;
+	float:left;
+	width:100%;
+}
 .actionsbig a {
 	float:left;
 	padding-left:6px;
@@ -2341,8 +2348,8 @@ padding-top: 0px;	padding-right: 0px;	padding-bottom: 0px;	padding-left: 0px;}
 .actions-message {
 	white-space: nowrap;
 	padding: 2px;
-	background-color: #E5EDF9;
-	border: 1px solid #bbb;
+	background-color: #D2ECF5;
+	border: 1px solid #ABDAEA;
 }
 
 /**********************************************
