Updating chamilo CSS + adding  image for the new type of question \"Exact\"

--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -291,7 +291,7 @@ input[text] {
 #top_corner {
 }
 #institution {
-	background-image: url(images/logo-chamilo.png);
+	background-image: url(images/logo-chamilo.gif);
 	background-repeat:no-repeat;
 	height:60px;
 	overflow:hidden;
