--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -1867,7 +1867,7 @@ div.comments {
 	background:#ccc;
 	padding: 3px;
 	width: 200px;
-	margin-left:10px;
+	/* margin-left:10px; */
 }
 .rounded_inner {
 	background:#FFF;
@@ -1938,26 +1938,20 @@ span.radio {
   background-color:#EEEEEE;
   border:1px solid #CCCCCC;
   margin-right : 24px;
-  width : 155px;margin-bottom:5px;
+  width : 155px;
+  margin-bottom:20px;
 }
 #wrapper-clock{
   width:100%;
   margin:0;
 }
 .count_down{
-  padding: 3px;
-  font-family:Georgia, "Times New Roman", Times, serif;
+  padding: 3px;  
   font-size:22px;
   font-weight:bold;
   color:#222;
 }
-.count_down sup{
-  font-family:"Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
-  font-size:12px;
-  color:#555;
-  padding:0px 10px 0 0;
-  font-weight:normal;
-}
+
 /*
 ------------------------------------------------------------------------------
     Learning path
@@ -3481,4 +3475,28 @@ div.image-social-content center.friend {
 
 .social-group-details-info {
 	padding:2px 0px 2px 0px;
+}
+
+.social-background-content {
+	z-index:5;
+	position:relative;
+	border:1px dotted #DDDDDD;
+}
+
+.social-background-content .hidden_message {
+	cursor:pointer;
+	position:absolute;	
+	top:1px;
+	right:1px;
+}
+
+.hidden_message {
+	background-color:#5A5A5A;	
+	padding:2px;
+	margin:0px;
+}
+
+.hidden_message a {
+	color:#fff;
+	/* text-decoration: underline; */
 }
