--- a/main/css/dokeos_classic_2D/default.css
+++ b/main/css/dokeos_classic_2D/default.css
@@ -2310,7 +2310,7 @@ input.forms	{
 	background:#ccc;
 	padding: 3px;
 	width: 200px;
-	margin-left:10px;
+	/*margin-left:10px;*/
 }
 .rounded_inner {
 	background:#FFF;
@@ -2391,17 +2391,9 @@ span.radio {
 }
 .count_down{
   padding: 3px;
-  font-family:Georgia, "Times New Roman", Times, serif;
   font-size:22px;
   font-weight:bold;
   color:#222;
-}
-.count_down sup{
-  font-family:"Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
-  font-size:12px;
-  color:#555;
-  padding:0px 10px 0 0;
-  font-weight:normal;
 }
 /*****************************************************
  *  BUTTONS	                                         *
@@ -3681,4 +3673,29 @@ div.image-social-content center.friend {
 
 .social-group-details-info {
 	padding:2px 0px 2px 0px;
+}
+
+
+.social-background-content {
+	z-index:5;
+	position:relative;
+	border:1px dotted #DDDDDD;
+}
+
+.social-background-content .hidden_message {
+	cursor:pointer;
+	position:absolute;	
+	top:0px;
+	right:0px;
+}
+
+.hidden_message {
+	background-color:#5A5A5A;	
+	padding:2px;
+	margin:0px;
+}
+
+.hidden_message a {
+	color:#fff;
+	/* text-decoration: underline; */
 }
