--- a/main/css/empire_green/default.css
+++ b/main/css/empire_green/default.css
@@ -1239,7 +1239,7 @@ div.report_section h4 {
 .session_box {
 	background-color: #efefef;
 	border: 1px solid #666;
-	font-weight: bold;
+	/* font-weight: bold; */
 	color: #666;
 	list-style-type: none;
 	margin: 5px 5px 5px 40px;
@@ -1847,7 +1847,8 @@ div.comments {
   background-color:#EEEEEE;
   border:1px solid #CCCCCC;
   margin-right : 24px;
-  width : 155px;margin-bottom:5px;
+  width : 155px;
+  margin-bottom:20px;
 }
 #wrapper-clock{
   width:100%;
@@ -1855,18 +1856,11 @@ div.comments {
 }
 .count_down{
   padding: 3px;
-  font-family:Georgia, "Times New Roman", Times, serif;
   font-size:22px;
   font-weight:bold;
   color:#222;
 }
-.count_down sup{
-  font-family:"Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
-  font-size:12px;
-  color:#555;
-  padding:0px 10px 0 0;
-  font-weight:normal;
-}
+
 /*
 ------------------------------------------------------------------------------
     Learning path
@@ -3381,3 +3375,29 @@ div.image-social-content center.friend {
 	padding:2px 0px 2px 0px;
 }
 
+
+
+
+.social-background-content {
+	z-index:5;
+	position:relative;
+	border:1px dotted #DDDDDD;
+}
+
+.social-background-content .hidden_message {
+	cursor:pointer;
+	position:absolute;	
+	top:0px;
+	right:0px;
+}
+
+.hidden_message {
+	background-color:#5A5A5A;	
+	padding:2px;
+	margin:0px;
+}
+
+.hidden_message a {
+	color:#fff;
+	/* text-decoration: underline; */
+}
