--- a/main/css/baby_orange/default.css
+++ b/main/css/baby_orange/default.css
@@ -2589,7 +2589,7 @@ div.image-social-content center.friend {
 
 /*  SOCIAL MENU VERTICAL */
 .social-menu  {
-	width:180px;
+	width:100%;
 	height:auto;
 }
 .social-menu ul {
@@ -2619,7 +2619,7 @@ div.image-social-content center.friend {
 	margin-left:20px;
 }
 .social-menu-title{
-	width:180px;
+	width:100%;
 	float:left;
 	height:auto;
 	background-color:#EE8204;
@@ -2834,7 +2834,7 @@ div.image-social-content center.friend {
 }
 
 #social-content-online {
-	background-color:#32578B;
+	background-color:#616161;
 	margin-bottom:5px;
 	margin-top:2px;
 	padding:1px;
