--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -3428,9 +3428,9 @@ div.image-social-content center.friend {
 #social-content-left {
 	float:left;
 	height:auto;
-	margin-right:16px;
+	margin-right:2px;
 	min-height:300px;
-	width:200px;
+	width:195px;
 	overflow:hidden;	
 }
 .social-content-description {
@@ -3488,7 +3488,7 @@ div.image-social-content center.friend {
 
 /*  SOCIAL MENU VERTICAL */
 .social-menu  {
-	width:180px;
+	width:100%;
 	height:auto;
 }
 .social-menu ul {
@@ -3518,7 +3518,7 @@ div.image-social-content center.friend {
 	margin-left:20px;
 }
 .social-menu-title{
-	width:180px;
+	width:100%;
 	float:left;
 	height:auto;
 	background-color:#00AAE3;
