--- a/main/css/corporate/default.css
+++ b/main/css/corporate/default.css
@@ -2588,7 +2588,7 @@ div.image-social-content center.friend {
 
 /*  SOCIAL MENU VERTICAL */
 .social-menu  {
-	width:180px;
+	width:100%;
 	height:auto;
 }
 .social-menu ul {
@@ -2618,7 +2618,7 @@ div.image-social-content center.friend {
 	margin-left:20px;
 }
 .social-menu-title{
-	width:180px;
+	width:100%;
 	float:left;
 	height:auto;
 	background-color:#434343;
@@ -2833,7 +2833,7 @@ div.image-social-content center.friend {
 }
 
 #social-content-online {
-	background-color:#32578B;
+	background-color:#616161;
 	margin-bottom:5px;
 	margin-top:2px;
 	padding:1px;
