--- a/main/css/dokeos_blue/default.css
+++ b/main/css/dokeos_blue/default.css
@@ -3103,7 +3103,7 @@ div.image-social-content center.friend {
 
 /*  SOCIAL MENU VERTICAL */
 .social-menu  {
-	width:180px;
+	width:100%;
 	height:auto;
 }
 .social-menu ul {
@@ -3133,7 +3133,7 @@ div.image-social-content center.friend {
 	margin-left:20px;
 }
 .social-menu-title{
-	width:180px;
+	width:100%;
 	float:left;
 	height:auto;
 	background-color:#4171B5;
@@ -3348,7 +3348,7 @@ div.image-social-content center.friend {
 }
 
 #social-content-online {
-	background-color:#32578B;
+	background-color:#616161;
 	margin-bottom:5px;
 	margin-top:2px;
 	padding:1px;
