Updating CSS for new group changes

--- a/main/css/delicious_bordeaux/default.css
+++ b/main/css/delicious_bordeaux/default.css
@@ -3362,7 +3362,7 @@ div.image-social-content center.friend {
 }
 
 #social-group-details {
-	margin-left:82px;
+	margin-bottom:20px;
 }
 .social-group-details-info span {
 	color:#777;
