--- a/main/css/steel_grey/default.css
+++ b/main/css/steel_grey/default.css
@@ -3368,7 +3368,7 @@ div.image-social-content center.friend {
 }
 
 #social-group-details {
-	margin-left:82px;
+	margin-bottom:20px;
 }
 .social-group-details-info span {
 	color:#777;
