--- a/main/css/silver_line/default.css
+++ b/main/css/silver_line/default.css
@@ -338,7 +338,7 @@ ul {
 	width:550px;
 	position: absolute;
 	bottom:-.75em;
-	right:.5em;
+	right: 1em;
 	padding: 0;
 	margin:0;
 	text-align: right;
