--- a/main/css/baby_orange/default.css
+++ b/main/css/baby_orange/default.css
@@ -176,6 +176,15 @@ a.breadcrumb0 {
 	background:url(images/home.gif) no-repeat;
 	padding-left: 22px;
 }
+/* The tool shortcuts */
+#toolshortcuts {
+	text-align: right;
+	clear: right;
+	margin-left: auto;
+	margin-right: auto;
+	width: 99%
+}
+
 /* footer styles */
 
 #footer {
