--- a/main/css/cool_blue/default.css
+++ b/main/css/cool_blue/default.css
@@ -334,6 +334,9 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 #toolshortcuts {
 	text-align: right;
 	clear: right;
+	margin-left: auto;
+	margin-right: auto;
+	width: 98%;
 }
 /*****************************************************
  *  FOOTER STYLES                                    *
