--- a/main/css/dokeos_classic_2D/default.css
+++ b/main/css/dokeos_classic_2D/default.css
@@ -350,6 +350,9 @@ input.link_alike:hover {
 #toolshortcuts {
 	text-align: right;
 	clear: right;
+	margin-left: auto;
+	margin-right: auto;
+	width: 98%;
 }
 /*
 ==============================================================================
