--- a/main/css/public_admin/default.css
+++ b/main/css/public_admin/default.css
@@ -398,6 +398,9 @@ select, input[type=checkbox], input[type=radio], input[type=button], input[type=
 #toolshortcuts {
 	text-align: right;
 	clear: right;
+	margin-left: auto;
+	margin-right: auto;
+	width: 98%
 }
 /*****************************************************
  *  FOOTER STYLES                                    *
