--- a/main/css/sober_brown/default.css
+++ b/main/css/sober_brown/default.css
@@ -386,6 +386,9 @@ input[text] {
 #toolshortcuts {
 	text-align: right;
 	clear: right;
+	margin-left: auto;
+	margin-right: auto;
+	width: 98%
 }
 /*****************************************************
  *  FOOTER STYLES                                    *
